# BitonicPixelSorterForAE

./: .gitignore  CMakeLists.txt  Directory.Build.props  LICENSE  README.md
GPU/: BitonicPixelSorter_Kernel.cl  BitonicPixelSorter_Kernel.cu  BitonicPixelSorter_Kernel.hlsl  BitonicPixelSorter_Kernel.metal
Localise/: AELocalise.h  AE_SDK.h  LocKeys.h  Strings_en_US.h  Strings_ja_JP.h  Strings_ko_KR.h  Strings_zh_CN.h
Mac/: Info.plist.in
PiPL/: BitonicPixelSorterPiPL.r
Source/: BPS_DirectXShaderLoad.cpp  BPS_DirectXShaderLoad.h  BPS_MetalBackend.h  BitonicPixelSorter.cpp  BitonicPixelSorter.h  BitonicPixelSorter_CPU.cpp  BitonicPixelSorter_GPU.cpp  BitonicPixelSorter_GpuEligibility.h  BitonicPixelSorter_GpuHost.cpp  BitonicPixelSorter_Metal.mm  BitonicPixelSorter_Target.h  BitonicPixelSorter_UI.cpp
cmake/: embed_binary.py  preprocess_pipl_win.cmake
docs/: AE_PORT_PLAN.md
